--- a/src/components/NoteForm/NoteForm.css
+++ b/src/components/NoteForm/NoteForm.css
@@ -5,16 +5,39 @@ form {
 }
 
 textarea {
+  font-size: 0.8125rem;
+  line-height: 1.230769231;
   box-sizing: border-box;
   resize: none;
   width: 100%;
   height: 100%;
-  padding: 2%;
+  padding: 2% 4%;
   outline: none;
   border: solid #c2c2d6 1px;
   border-radius: 4px;
 }
 
-textarea.invalidInput {
-  outline: solid red 2px;
+textarea.scrollbar-padding {
+  padding-right: calc(4% - 12px);
+}
+
+#noteForm > footer {
+  display: grid;
+  place-items: center;
+  right: 0;
+  top: 40%;
+}
+
+textarea::-webkit-scrollbar {
+  width: 12px;
+}
+
+textarea::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+textarea::-webkit-scrollbar-thumb {
+  background-color: rgba(112, 117, 122, 0.2);
+  border-radius: 20px;
+  border: 3px solid white;
 }
