--- a/src/components/Notes/Notes.css
+++ b/src/components/Notes/Notes.css
@@ -1,14 +1,25 @@
 ul {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0 2rem 0 0;
   padding: 0;
   list-style-type: none;
   overflow-y: auto;
-  max-height: 100%;
+  height: 100%;
+}
+
+ul.scrollbar-padding {
+  margin-right: calc(2rem - 12px);
 }
 
 li {
-  margin: 0 2rem;
+  margin: 0 0 0 2rem;
+  /**
+     * A calculation to ensure the note width doesn't increase
+     * in edge cases where reducing the margin-right of the UL element
+     * by the width of the scrollbar ends up giving enough room for
+     * the note text to expand into the additional width without
+     * overflowing.
+     **/
+  max-width: calc(100vw - 2 * 2rem);
 }
 
 hr {
@@ -33,7 +44,7 @@ time {
 .no-notes-to-show {
   margin: 0 2rem;
   height: 100%;
-  width: 100%;
+  width: calc(100% - 4rem);
   background-image: linear-gradient(to bottom, white, blue);
 }
 
@@ -125,9 +136,7 @@ ul::-webkit-scrollbar-track {
 }
 
 ul::-webkit-scrollbar-thumb {
-  background-color: blue;
+  background-color: rgba(112, 117, 122, 0.2);
   border-radius: 20px;
-  border: 3px solid orange;
+  border: 3px solid white;
 }
-
-/* TODO: decrease LI margin-right when scrollbar is shown */
