--- a/src/components/NotesPanel/NotesPanel.css
+++ b/src/components/NotesPanel/NotesPanel.css
@@ -1,19 +1,24 @@
 #notesPanel {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 #notesPanel > header {
   margin: 0 2rem;
   display: flex;
   flex-direction: column;
-}
-
-#notesPanel > footer {
-  text-align: center;
+  flex-grow: 0;
 }
 
 .notes-list-wrapper {
-  height: 85%;
+  height: 80%;
+}
+
+#notesPanel > footer {
+  flex: 2;
+  display: grid;
+  place-items: center;
 }
 
 .query {
